--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["./src/scss"]
+            },
             "scripts": [],
             "es5BrowserSupport": true
           },
