--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-highcharts": "^7.1.0",
     "core-js": "^2.5.4",
+    "highcharts": "^7.0.3",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.10.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
